instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:3: error: not found: value color
setCouleurBrosse(color.blue);
                 ^InstructionsDrawG:9: error: not found: type int
avance(4:int);
         ^InstructionsDrawG:11: error: not found: value avancde
avancde(2:Int);
^